--- a/src/main/resources/persistence-mysql.properties
+++ b/src/main/resources/persistence-mysql.properties
@@ -1,12 +1,12 @@
 # jdbc.X
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://wstcr.com:3306/RunsApp?createDatabaseIfNotExist=true
+jdbc.url=jdbc:mysql://wstcr.com:3306/RunsApp?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf8
 jdbc.user=root
 jdbc.pass=AliyunMysqlWstcr
 
 # hibernate.X
 hibernate.connection.driverClass=org.gjt.mm.mysql.Driver
-hibernate.connection.url=jdbc:mysql://wstcr.com:3306/RunsApp
+hibernate.connection.url=jdbc:mysql://wstcr.com:3306/RunsApp?useUnicode=true&characterEncoding=utf8
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.connection.username=root
 hibernate.connection.password=AliyunMysqlWstcr
